--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,5 @@
+# Python CircleCI 2.0 configuration file
+#
 # Check https://circleci.com/docs/2.0/language-python/ for more details
 #
 version: 2
@@ -14,10 +16,10 @@ jobs:
 
       # Download and cache dependencies
       - restore_cache:
-        keys:
-          - v1-dependencies-{{ checksum "requirements.txt" }}
-          # # fallback to using the latest cache if no exact match is found
-          # - v1-dependencies-
+          keys:
+            - v1-dependencies-{{ checksum "requirements.txt" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
 
       - run:
           name: install dependencies
